--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Asala Shop — متجر إلكتروني مغربي</title>
-    <link rel="stylesheet" href="img/2.jpg">
+    <link rel="icon" href="img/Log1o.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
