--- a/index.html
+++ b/index.html
@@ -1,18 +1,110 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
   <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Asala Shop — متجر إلكتروني مغربي</title>
+    <meta
+      name="description"
+      content="متجر أسالة - متجر إلكتروني مغربي متخصص في المجوهرات الذهبية والفضية والعطور الفاخرة. تسوق أفضل الإكسسوارات والعطورات بأسعار منافسة مع شحن سريع لكل المغرب."
+    />
+    <meta
+      name="keywords"
+      content="متجر إلكتروني مغربي, مجوهرات ذهبية, عطور فاخرة, أكسسوارات نسائية, متجر عطور, شراء مجوهرات أونلاين, Asala Shop"
+    />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="language" content="Arabic" />
+    <meta name="author" content="Asala Shop" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://asala-shop.ma/" />
+    <meta property="og:title" content="متجر أسالة - مجوهرات وعطور فاخرة" />
+    <meta
+      property="og:description"
+      content="متجر إلكتروني مغربي متخصص في المجوهرات الفاخرة والعطور الأصلية. اكتشف مجموعتنا الحصرية بأسعار منافسة."
+    />
+    <meta
+      property="og:image"
+      content="https://asala-shop.ma/img/og-image.jpg"
+    />
+    <meta property="og:locale" content="ar_AR" />
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://asala-shop.ma/" />
+    <meta name="twitter:title" content="متجر أسالة - مجوهرات وعطور فاخرة" />
+    <meta
+      name="twitter:description"
+      content="تسوق المجوهرات والعطور الفاخرة من متجر أسالة الإلكتروني المتخصص."
+    />
+    <meta
+      name="twitter:image"
+      content="https://asala-shop.ma/img/twitter-image.jpg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://asala-shop.ma/" />
+
+    <!-- Title -->
+    <title>متجر أسالة - مجوهرات وعطور فاخرة | Asala Shop</title>
+
+    <!-- Favicon -->
     <link rel="icon" href="img/Log1o.png" />
+    <link rel="apple-touch-icon" href="img/Log1o.png" />
+
+    <!-- Preconnect to External Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&family=Cinzel+Decorative:wght@700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="index.css" />
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Organization",
+        "name": "Asala Shop",
+        "url": "https://asalashop.netlify.app/",
+        "logo": "https://asala-shop.ma/img/Log1o.png",
+        "description": "متجر إلكتروني مغربي متخصص في المجوهرات والعطور الفاخرة",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Customer Service",
+          "telephone": "+212-XXXXXXXXX",
+          "areaServed": "MA"
+        }
+      }
+    </script>
+
+    <!-- Product Schema (for better search results) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "LocalBusiness",
+        "name": "Asala Shop",
+        "image": "https://asala-shop.ma/img/Log1o.png",
+        "description": "متجر إلكتروني متخصص في المجوهرات والعطور الفاخرة",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "MA",
+          "addressLocality": "Casablanca",
+          "addressRegion": "Casablanca-Settat"
+        },
+        "priceRange": "$"
+      }
+    </script>
   </head>
   <body>
     <!-- NAV -->
