--- a/index.html
+++ b/index.html
@@ -56,29 +56,70 @@
     <link rel="icon" href="img/Log1o.png" />
     <link rel="apple-touch-icon" href="img/Log1o.png" />
 
+    <!-- Preload critical hero images for faster LCP -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=300&q=60"
+      media="(max-width: 640px)"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=400&q=80"
+      media="(min-width: 641px)"
+    />
+
     <!-- Preconnect to External Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    <link rel="preconnect" href="https://images.unsplash.com" />
 
-    <!-- Fonts with preload for better performance -->
+    <!-- Fonts with optimal display strategy -->
     <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&family=Cinzel+Decorative:wght@700&display=swap"
-      as="style"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&family=Cinzel+Decorative:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&family=Cinzel+Decorative:wght@700&display=swap"
       rel="stylesheet"
+      media="print"
+      onload="
+        this.media = 'all';
+        this.onload = null;
+      "
     />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&family=Cinzel+Decorative:wght@700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="index.css" />
+    <!-- Stylesheets with performance optimization -->
+    <link rel="stylesheet" href="index.css" media="all" />
 
     <!-- Critical CSS for above-the-fold content -->
     <style>
-      .skip-to-main:focus {
-        top: 0;
+      :root {
+        --gold: #c9a84c;
+        --dark: #0a0a0f;
+        --text: #f0ede8;
+      }
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        font-family:
+          system-ui,
+          -apple-system,
+          sans-serif;
+        background: var(--dark);
+        color: var(--text);
+        direction: rtl;
+        overflow-x: hidden;
       }
       .nav {
         position: fixed;
@@ -93,9 +134,22 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
       }
-      body {
+      main {
         margin-top: 64px;
+      }
+      .skip-to-main:focus {
+        top: 0;
+      }
+      @media (max-width: 768px) {
+        .nav {
+          padding: 0 16px;
+          height: 56px;
+        }
+        main {
+          margin-top: 56px;
+        }
       }
     </style>
 
@@ -456,6 +510,6 @@
         menu.setAttribute("aria-hidden", "true");
       }
     </script>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
