change numvber phone

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     <!-- Preconnect to External Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://images.unsplash.com" />
     <link rel="preconnect" href="https://images.unsplash.com" />
@@ -390,7 +391,7 @@
           onclick="submitOrder()"
           aria-label="إرسال الطلب عبر واتساب"
         >
-          <span aria-hidden="true">📲</span> إرسال الطلب عبر واتساب
+          <span aria-hidden="true">📲</span> إرسال الطلب
         </button>
       </div>
     </div>
